# docx_markup_benchmark

./: README.md  main.py  pyproject.toml
.cursor/rules/: uv.mdc
src/: cli.py  docx_utils.py  evaluator.py  report.py
tests/: helpers.py  test_scenarios.py  test_tables_and_merges.py
tmpdocs/: doc.docx  doc2.docx  ev.docx  gt.docx  gv.docx  merged.docx  merged_h.docx  merged_v.docx  s1_ev.docx  s6_ev.docx  s6_gt.docx  saved.docx  t1.docx
